--- a/minggu2/grid.html
+++ b/minggu2/grid.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
     <title>Grid</title>
     <style>
-        body,
         html{
             margin: 0;
             padding: 0;
@@ -11,8 +10,9 @@
             font-family: arial;
             color: white;
             text-transform: uppercase;
-            text-align:  center;
+            text-align: center;
         }
+
         .container{
             width: 600px;
             margin: 50px auto;
@@ -20,13 +20,14 @@
             box-sizing: border-box;
             padding: 5px;
             display: grid;
-            grid-template-areas: "header hearder"
-            "aside main" 
+            grid-template-areas: "header header"
+            "aside main"
             "nav main"
             "footer footer";
             grid-template-columns: 1fr 1.5fr;
             grid-template-rows: 1fr 1fr 1.3fr;
         }
+
         header{
             grid-area: header;
             background-color: #B063D8;
@@ -34,16 +35,19 @@
             justify-content: center;
             align-items: center;
         }
+
         aside{
             grid-area: aside;
-            background-color: #2f93ff;
-            padding: 60px 0
+            background-color: #2F93FF;
+            padding: 60px 0;
         }
+
         nav{
             grid-area: nav;
             background-color: #E45765;
             padding: 100px 0;
         }
+
         main{
             grid-area: main;
             background-color: #E0AA77;
@@ -53,21 +57,22 @@
             justify-content: center;
             align-items: center;
         }
+
         footer{
             grid-area: footer;
             background-color: #666;
             padding: 20px 0;
         }
     </style>
-    </head>
+</head>
 
-    <body>
-        <div class="container">
-            <header>Header</header>
-            <aside>Aside</aside>
-            <nav>Nav</nav>
-            <main>Main</main>
-            <footer>Footer</footer>
-        </div>
-    </body>
+<body>
+    <div class="container">
+        <header>Header</header>
+        <aside>Aside</aside>
+        <nav>Nav</nav>
+        <main>Main</main>
+        <footer>Footer</footer>
+    </div>
+</body>
 </html>
